manifest/total.yaml
---
# Source: nexus-repository-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: par-prd-nexus-1-nexus-repository-manager
  labels:
    helm.sh/chart: nexus-repository-manager-64.2.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
    app.kubernetes.io/version: "3.64.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      name: nexus-ui
  selector:
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
---
# Source: nexus-repository-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: par-prd-nexus-1-nexus-repository-manager-docker-5000
  labels:
    helm.sh/chart: nexus-repository-manager-64.2.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
    app.kubernetes.io/version: "3.64.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: docker-5000
  selector:
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
---
# Source: nexus-repository-manager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: par-prd-nexus-1-nexus-repository-manager
  labels:
    helm.sh/chart: nexus-repository-manager-64.2.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
    app.kubernetes.io/version: "3.64.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus-repository-manager
      app.kubernetes.io/instance: par-prd-nexus-1      
  template:
    metadata:
      annotations:
        checksum/configmap-properties: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: nexus-repository-manager
        app.kubernetes.io/instance: par-prd-nexus-1
    spec:
      serviceAccountName: par-prd-nexus-1-nexus-repository-manager
      terminationGracePeriodSeconds: 120
      containers:
        - name: nexus-repository-manager
          image: "sonatype/nexus3:3.64.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          lifecycle:
          resources:
            
            null
          ports:
            - name: nexus-ui
              containerPort: 8081
            - name: docker-5000
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /nexus-data	
              name: nexus-repository-manager-data
      securityContext:
        
        fsGroup: 200
        runAsGroup: 200
        runAsUser: 200
      volumes:
        - name: nexus-repository-manager-data
          persistentVolumeClaim:
            claimName: par-prd-nexus-1-nexus-repository-manager-data
---
# Source: nexus-repository-manager/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: par-prd-nexus-1-nexus-repository-manager
  labels:
    helm.sh/chart: nexus-repository-manager-64.2.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
    app.kubernetes.io/version: "3.64.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "nexus3.telna.in"
      secretName: nexus-local-tls
  rules:
    - host: nexus3.telna.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: par-prd-nexus-1-nexus-repository-manager
                port:
                  number: 8081
---
# Source: nexus-repository-manager/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: par-prd-nexus-1-nexus-repository-manager-docker-5000
  labels:
    helm.sh/chart: nexus-repository-manager-64.2.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: par-prd-nexus-1
    app.kubernetes.io/version: "3.64.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /repository/telna-docker
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "nexus3.telna.in"
      secretName: nexus-local-tls
  rules:
    - host: nexus3.telna.in
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: par-prd-nexus-1-nexus-repository-manager-docker-5000
                port:
                  number: 5000
---
# Source: nexus-repository-manager/templates/test/test-check-logs.yaml
# This test checks the logs to confirm the running app version is the same as the chart app version
# This test will run only if the flag persistence.enabled is true on the values.yaml file
apiVersion: v1
kind: Pod
metadata:
  name: "par-prd-nexus-1-test-check-logs"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
spec:
  containers:
    - name: par-prd-nexus-1-test-check-logs
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "cat /nexus-data/log/nexus.log | grep 3.64.0 || exit 1"]
      volumeMounts:
         - mountPath: /nexus-data	
           name: nexus-repository-manager-data
  volumes:
    - name: nexus-repository-manager-data          
      persistentVolumeClaim:
        claimName: par-prd-nexus-1-nexus-repository-manager-data         
  restartPolicy: Never
---
# Source: nexus-repository-manager/templates/test/test-connection.yaml
# This test checks that the server is up and running by making a wget
apiVersion: v1
kind: Pod
metadata:
  name: "par-prd-nexus-1-test-connection"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
spec:
  containers:
    - name: par-prd-nexus-1-test-connection
      image: busybox
      command: ['wget']
      args: ['par-prd-nexus-1-nexus-repository-manager:8081']
  restartPolicy: Never
